Lead Time in Quotation

--- a/Views/Admin/Quotation.cshtml
+++ b/Views/Admin/Quotation.cshtml
@@ -46,6 +46,7 @@
                                     <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().Discount)</th>
                                     <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().TotalPrice)</th>
                                     <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().GST)</th>
+                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().IndLeadTime)</th>
                                 </tr>
                             </thead>
                             <tbody>
