Pending Complete and margin is not complete
Enquiry type item wise and po source  viaexcel

--- a/Views/Admin/Enquiry.cshtml
+++ b/Views/Admin/Enquiry.cshtml
@@ -136,20 +136,6 @@
                                     </div>
                                     <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
                                         <div class="form-group">
-                                            @Html.LabelFor(m => m.EnquiryModels.Type, new { @class = "form-control-label" })
-                                            @Html.DropDownListFor(m => m.EnquiryModels.Type,
-                                           new List<SelectListItem>
-                                              {
-                                                new SelectListItem{ Text="STANDARD", Value = "STANDARD", Selected = true  },
-                                                new SelectListItem{ Text="NON STANDARD", Value = "NON STANDARD" },
-                                              },
-                                            "--Select Enq Type--", new { @class = "form-control select2 type" })
-                                            @Html.ValidationMessageFor(m => m.EnquiryModels.Type, "",
-                                    new { @class = "text-danger errtype" })
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
-                                        <div class="form-group">
                                             @Html.LabelFor(m => m.EnquiryModels.EnqId, new { @class = "form-control-label" }) <sup>*</sup>
                                             @Html.TextBoxFor(m => m.EnquiryModels.EnqId,
                                     new
@@ -308,7 +294,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <div class="form-group">
                                         @Html.LabelFor(m => m.EnquiryModels.SpcRemark, new { @class = "form-control-label" })
                                         @Html.TextAreaFor(m => m.EnquiryModels.SpcRemark,
@@ -345,6 +331,20 @@
                                 })
                                         @Html.ValidationMessageFor(m => m.EnquiryModels.Price, "",
                                 new { @class = "text-danger errprice" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.EnquiryModels.Type, new { @class = "form-control-label" })
+                                        @Html.DropDownListFor(m => m.EnquiryModels.Type,
+                                       new List<SelectListItem>
+                                          {
+                                            new SelectListItem{ Text="STANDARD", Value = "STANDARD", Selected = true  },
+                                            new SelectListItem{ Text="NON STANDARD", Value = "NON STANDARD" },
+                                          },
+                                        "--Select Enq Type--", new { @class = "form-control select2 type" })
+                                        @Html.ValidationMessageFor(m => m.EnquiryModels.Type, "",
+                                new { @class = "text-danger errtype" })
                                     </div>
                                 </div>
                             </div>
@@ -387,6 +387,7 @@
                                     <th>@Html.DisplayNameFor(model => model.EnquiryModelList.FirstOrDefault().SpcRemark)</th>
                                     <th>@Html.DisplayNameFor(model => model.EnquiryModelList.FirstOrDefault().Quantity)</th>
                                     <th>@Html.DisplayNameFor(model => model.EnquiryModelList.FirstOrDefault().Price)</th>
+                                    <th>@Html.DisplayNameFor(model => model.EnquiryModelList.FirstOrDefault().Type)</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
