--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -67,7 +67,7 @@
                                     <li><a href="#">With in 48 Hours <span class="badge bg-blue">@Model.EnqCountModels.PYesterdayS</span><span class="pull-right badge bg-blue">@Model.EnqCountModels.PYesterdayN</span></a></li>
                                     <li><a href="#">With in 24 Hours <span class="badge bg-blue">@Model.EnqCountModels.PTodayS</span><span class="pull-right badge bg-green">@Model.EnqCountModels.PTodayN</span></a></li>
                                     <li><a href="#">Current Month <span class="badge bg-blue">@Model.EnqCountModels.PCMonthS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonthN</span></a></li>
-                                    <li><a href="#">CM Regret <span class="badge bg-blue m-r-60">@Model.EnqCountModels.CMRegret</span>CM Hold<span class="pull-right badge bg-red"> @Model.EnqCountModels.CMHold</span></a></li>
+                                    <li><a href="#">CM Regret <span class="badge bg-blue m-r-40">@Model.EnqCountModels.CMRegret</span>CM Hold<span class="pull-right badge bg-red"> @Model.EnqCountModels.CMHold</span></a></li>
                                     <li><a href="#">Current Month Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonth</span></a></li>
                                     @*<li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PTotal</span></a></li>*@
                                 </ul>
@@ -109,7 +109,67 @@
                                     <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
                                     <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
                                     <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
-                                   @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="box box-widget widget-user-2">
+                            <div class="widget-user-header bg-aqua-active p-10">
+                                <h3 class="widget-user-username m-l-0">Purchase Order</h3>
+                                <h5 class="widget-user-desc m-l-0">Pending</h5>
+                            </div>
+                            <div class="box-footer no-padding">
+                                <ul class="nav nav-stacked">
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="box box-widget widget-user-2">
+                            <div class="widget-user-header bg-aqua-active p-10">
+                                <h3 class="widget-user-username m-l-0">Purchase Order</h3>
+                                <h5 class="widget-user-desc m-l-0">Complete</h5>
+                            </div>
+                            <div class="box-footer no-padding">
+                                <ul class="nav nav-stacked">
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="box box-widget widget-user-2">
+                            <div class="widget-user-header bg-aqua-active p-10">
+                                <h3 class="widget-user-username m-l-0">Purchase Order</h3>
+                                <h5 class="widget-user-desc m-l-0">Margin</h5>
+                            </div>
+                            <div class="box-footer no-padding">
+                                <ul class="nav nav-stacked">
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
