--- a/Views/Admin/POSourced.cshtml
+++ b/Views/Admin/POSourced.cshtml
@@ -64,7 +64,7 @@
                     <div class="box-header with-border">
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <a href="javascript:void(0)" class="btn bg-aqua posourced">SOURCED</a>
-                            @*@Html.EncodedActionLink("EXCEL SOURCED", "ImportPOSource", "Admin", new { }, new { @class = "btn bg-aqua m-l-20", title = "Upload PO Sourced Excel", @target = "_blank" })*@
+                            @Html.EncodedActionLink("EXCEL SOURCED", "ImportPOSource", "Admin", new { }, new { @class = "btn bg-aqua m-l-20", title = "Upload PO Sourced Excel", @target = "_blank" })
                         </div>
                     </div>
                     <!-- /.box-body -->
